Update code add docker
